Get css building through stylus; include grid-stylus to get grid 960

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "*"
+    "express": "*",
+    "node-sass": "*"
   },
   "engines": {
     "node": "0.8.x",
