Add google analytics & github info to config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -9,3 +9,7 @@ title : Uncertain by Principle
 author:
   name: Stephen Demjanenko
   email: sdemjanenko@gmail.com
+  github: github.com/sdemjanenko
+
+google_analytics:
+  account: UA-37317087-1
