--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,11 @@
 permalink: /:year/:month/:day/:title
-auto: false
-pygments: true
+highlighter: 'pygments'
 paginate: 10
 exclude: ['public', 'bin', 'vendor', 'Gemfile', 'Gemfile.lock', 'Procfile', 'Rakefile', 'unicorn.rb', 'config.ru', 'README.md']
 destination: 'public'
+plugins:
+  - jekyll-paginate
+  - jekyll-timeago
 
 title : Uncertain by Principle
 author:
@@ -17,3 +19,4 @@ google_analytics:
 jekyll_timeago:
   depth: 1
   suffix: ''
+
