Add whiteglass theme
Since I haven't had a lot of time to spend on a custom theme, I am going
to use a simple one for now. I simplified the footer content.

https://github.com/yous/whiteglass

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 permalink: /:year/:month/:day/:title
 highlighter: 'pygments'
-paginate: 10
+theme: jekyll-whiteglass
+paginate_path: /posts/:num/
+paginate: 5
 exclude: ['public', 'bin', 'vendor', 'Gemfile', 'Gemfile.lock', 'Procfile', 'Rakefile', 'unicorn.rb', 'config.ru', 'README.md']
 destination: 'public'
 plugins:
