--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-permalink: /:year/:month/:day/:title
+permalink: /:year/:month/:day/:title/
 highlighter: 'pygments'
 theme: jekyll-whiteglass
 paginate_path: /posts/:num/
@@ -8,7 +8,7 @@ plugins:
   - jekyll-paginate
   - jekyll-timeago
 
-title : Uncertain by Principle
+title: Uncertain by Principle
 author:
   name: Stephen Demjanenko
   email: sdemjanenko@gmail.com
