Use `.html` as the previous change didn't work

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-permalink: /:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title.html
 highlighter: 'pygments'
 theme: jekyll-whiteglass
 paginate_path: /posts/:num/
